# steel-surface-defect-detector

./: .gitignore  CNN_Classifier.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: CNN_Classifier-checkpoint.ipynb
anomaly_detection/: Autoencoder.py  fine_tuning_AT.py  infer_anomaly.py  steel_autoencoder.keras  train_autoencoder.py
classifiers/.ipynb_checkpoints/: CNN_Classifier-checkpoint.ipynb
data/.ipynb_checkpoints/: CNN_Classifier-checkpoint.ipynb
defect_classification/classical_ml/: HOG_SVM_Classifier.ipynb
defect_classification/cnn/: inference.py
explainability/: gradcam.py  gradcam_run.py
explainations/: How to run.txt
models/: mobilenetv2_defect.pkl
src/: README.md
src/defect_detector/anomaly_detection/: Autoencoder.py  fine_tuning_AT.py  infer_anomaly.py  train_autoencoder.py
src/defect_detector/defect_classification/cnn/: CNN_Classifier.ipynb  inference.py
src/defect_detector/explainability/: gradcam.py  gradcam_run.py
streamlit_app/: app.py
